--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en-US">
   <head>
-    <title>Daniel Destefanis | Developer and Designer</title>
+    <title>Adam Stevens | Product designer and Hobby Miniature Painter</title>
     @include("includes/_head.html")
   </head>
   <body class="main">
